--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_ts.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_ts.vm
@@ -3,6 +3,7 @@
 $jdbcTool.setAllFromConfig($project.specificVariables)##
 $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
 #set( $extAttributes=$jdbcTool.getExtFieldAttributes($entity))
+#set( $selects=$jdbcTool.getSelects($entity))
 #set ( $LCentityName = $fn.uncapitalize($entity.name) )
 #set ( $LCentityNameWithDot = $fn.uncapitalize($entity.name) + "." )
 #set ( $_entityService = "_" + $fn.uncapitalize($baseServiceName) )
@@ -38,6 +39,12 @@ import * as _ from 'underscore';
 #if ($entity.name != 'Liste')
 import { ListeService } from './../../../entities/liste/services/liste.service';
 import { Liste } from './../../../entities/liste/liste.model';
+#end
+
+// Pour gestion des select
+#foreach ( $select in $selects)
+import { ${select.selectMTable}Service } from './../../../entities/${select.selectTable}/services/${select.selectTable}.service';
+import { ${select.selectMTable} } from './../../../entities/${select.selectTable}/${select.selectTable}.model';
 #end
 
 import { Lov } from './../../../common/lov';
@@ -76,6 +83,11 @@ export class $formComponentName extends Lov implements OnInit {
 #end
 #end
 
+  // Définition des select
+#foreach ( $select in $selects)
+  public selectOf${select.selectTable}_itm: SelectItem[];
+#end
+
 #if ($attrsFKs.size() > 0)
 #foreach ( $entitiesFK in $attrsFKs)
   // $entitiesFK Select
@@ -87,7 +99,10 @@ export class $formComponentName extends Lov implements OnInit {
   constructor(
 #if ($entity.name != 'Liste')
 	private _listeService: ListeService,         // Pour gestion des listes
-#end 
+#end
+#foreach ( $select in $selects)
+	private _${select.selectTable}Service: ${select.selectMTable}Service,         // Pour gestion des select
+#end
 #if ($attrsFKs.size() > 0)
 #foreach ( $entitiesFK in $attrsFKs)
     private _${fn.uncapitalize($entitiesFK)}Service: ${entitiesFK}Service,
@@ -142,6 +157,33 @@ export class $formComponentName extends Lov implements OnInit {
 	});
 #end
 #end
+
+	/* Chargement des select */	
+#foreach ( $select in $selects)
+    let options${select.selectMTable}: any = {params: [
+						],
+            	notPaged:true
+			   };
+		
+	  this._${select.selectTable}Service.getAll(options${select.selectMTable})
+	    .subscribe(
+	     (data: ${select.selectMTable}[]) => {
+			var data_itm: SelectItem[];
+			
+			data_itm = [];
+		    for (let c of data) {
+				     data_itm.push({ 
+									  label: (c.${select.selectLabel}), 
+								 	  value: (c.${select.selectCode})
+								   });
+			}
+	     	this.selectOf${select.selectTable}_itm = data_itm;
+	     },
+	     error => {
+					console.log('erreur');		
+	    });
+#end
+
   }
 
   getNewForm = (${LCentityName}?: ${entity}) => {
